2017-09-13  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Modify makeExecuteMessage function.
	Modify event listener(window "load") to adapt changing ids.
	
	* tryXpath/popup/popup.html:
	Add resolver area.
	Change element's id.

2017-09-12  larissa9839  <larissa9839@gmail.com>

	* tryXpath/popup/popup.js:
	Add context.

	* tryXpath/popup/popup.html:
	Add context.

	* tryXpath/scripts/try_xpath_content.js:
	Modify genericListener.listeners.execute function.
	Modify makeTypeStr function.

	* tryXpath/scripts/try_xpath_functions.js:
	Remove xpathResultMap variable.
	Define xpathResultMaps variable.
	Define getXpathResultNum function.

	* tryXpath/background/try_xpath_background.js:
	Remove genericListener.listeners.focusItemInTab function.

2017-09-11  larissa9839  <larissa9839@gmail.com>

	* tryXpath/pages/show_all_results.js:
	Modify showAllResults function. Remove context-area when
	results.context does not exist.

	* tryXpath/scripts/try_xpath_content.js:
	Define makeTypeStr function;
	Modify to set type string to resultType.

	* tryXpath/scripts/try_xpath_functions.js:
	Change type string in detail.
	Define getXpathResultStr function.

	* tryXpath/pages/show_all_results.html:
	Modify texts.

	* tryXpath/css/try_xpath_insert.css:
	Modify color specification.

	* tryXpath/pages/show_all_results.css:
	Create this file.

	* tryXpath/pages/show_all_results.js:
	Modify event listeners to use executionId.

	* tryXpath/scripts/try_xpath_content.js:
	Define executionCount variable.
	Modify genericListener.listeners.focusItem function to use
	executionCount.
	Modify genericListener.listeners.focusContextItem to use
	executionCount.
	
	* tryXpath/pages/show_all_results.js: 
	Define event listeners(button "click")
	
	* tryXpath/background/try_xpath_background.js: 
	Define genericListener.listeners.loadResults function.
	
	* tryXpath/pages/show_all_results.js: 
	Modify event listener(window "load").
	
	* tryXpath/background/try_xpath_background.js: